fix: resolve all production audit issues (C1-C4, H1-H5, M1-M7, minor fixes)
Critical:
- C1: Fix collaboration feedback endpoint crash — include matchedCreator in findUnique
- C2: Wire Redis-backed store to all rate limiters (rate-limit-redis) with memory fallback
- C3: Remove Vercel CORS origin from allowlist, deactivate vercel.json
- C4: Remove duplicate helmet() invocation with conflicting CSP

High:
- H1: Re-enable JWT weak-secret enforcement (throws in production)
- H2: Add deduplication to detectCollaborationStalls — no more duplicate FrictionEvents
- H3: Remove sensitive userId+score console.logs from reliabilityService
- H4: Fix campaign tracking — trackCampaignStart logs CAMPAIGN_CREATED (not FLOW_STARTED)
- H5: Gate message-request creation on existing MATCHED/ACCEPTED match

Medium/Minor:
- M1: Strip all verbose startup console.log statements from app.js
- M3: Fix duplicate SENTRY_DSN in envValidator, add NEW_RELIC_LICENSE_KEY to required vars
- M4: Add orderBy engagementRate+followerCount to matching pool pre-filter
- M5: Fix PGP 403 response returning success:true instead of success:false
- m2: Rescale reliability level thresholds to use full 0.5-5.0 score range
- m4: Remove NODE_ENV and origin exposure from public /api/ping endpoint
- m6: Add array and ISO date validation to collaboration PATCH route
- m7: authLimiter now counts all attempts (not just failed) to close bypass exploit

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,12 +1,16 @@
 {
-    "buildCommand": "npm install && npm run build",
-    "outputDirectory": "dist",
-    "installCommand": "npm install",
-    "framework": "vite",
-    "rewrites": [
-        {
-            "source": "/(.*)",
-            "destination": "/"
-        }
-    ]
+    "_deactivated": true,
+    "_reason": "Frontend is deployed to Cloudflare Pages (thecollabify.pages.dev). This vercel.json is intentionally disabled. If re-enabling Vercel hosting, restore the rewrites config below.",
+    "_original_config": {
+        "buildCommand": "npm install && npm run build",
+        "outputDirectory": "dist",
+        "installCommand": "npm install",
+        "framework": "vite",
+        "rewrites": [
+            {
+                "source": "/(.*)",
+                "destination": "/"
+            }
+        ]
+    }
 }
