--- a/backend/package.json
+++ b/backend/package.json
@@ -52,6 +52,7 @@
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.18.0",
     "prisma": "5.22.0",
+    "rate-limit-redis": "^4.3.1",
     "socket.io": "^4.8.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
